--- a/wofi/style.css
+++ b/wofi/style.css
@@ -4,14 +4,13 @@
 
 window {
   margin: 0px;
-  border: 1px solid @background;
+  border: none;
   background-color: @color0;
 }
 
 #input {
   margin: 5px;
   border: none;
-  border: 2px solid @color9;
   color: @foreground;
   background-color: @color8;
 }
@@ -24,7 +23,7 @@ window {
 
 #outer-box {
   margin: 5px;
-  /* border: none; */
+  border: none;
   background-color: @color0;
 }
 
