--- a/wofi/style.css
+++ b/wofi/style.css
@@ -11,7 +11,7 @@ window {
 #input {
   margin: 5px;
   border: none;
-  color: @foreground;
+  color: @color0;
   background-color: @color8;
 }
 
@@ -61,4 +61,5 @@ window {
 #entry:selected #text {
   font-weight: bold;
   background-color: transparent;
+  color: @color0;
 }
