[UP] auto-reload swaync, fix bat script

--- a/swaync/style.css
+++ b/swaync/style.css
@@ -13,7 +13,9 @@
 @define-color text-color @foreground;
 @define-color text-color-disabled rgb(150, 150, 150);
 @define-color bg-selected @color5;
-
+.root{
+  font-family: "JetBrainsMono Nerd Font";
+}
 .notification-row {
   outline: none;
 }
