--- a/hypr/wlogout/style.css
+++ b/hypr/wlogout/style.css
@@ -1,6 +1,6 @@
 /** ********** Fonts ********** **/
 * {
-    font-family: "JetBrains Mono", "Iosevka Nerd Font", archcraft, sans-serif;
+    font-family: "JetBrainsMono Nerd Font", "Iosevka Nerd Font", archcraft, sans-serif;
     font-size: 14px;
     font-weight: bold;
 }
