--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -217,6 +217,6 @@ tooltip {
 }
 
 #power-profiles-daemon {
-    padding: 0px 15px 0px 0px;
-    min-width: 20px;
+    padding-right: 15px;
+    font-size: 22px;
 }
