[ADD] waybar custom wf-recorder module

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -216,3 +216,9 @@ tooltip {
     padding-right: 15px;
     font-size: 22px;
 }
+
+#custom-wf-recorder {
+    font-size: 14px;
+    margin: 2px 7px 0px 7px;
+    color: red;
+}
