[UP] increase font size for hardware modules

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -209,8 +209,8 @@ tooltip {
     font-size: 18px;
 }
 
-#custom-keyboard {
-    padding: 0px 3px 0px 10px;
+#hardware * {
+    font-size: 18px;
 }
 
 #power-profiles-daemon {
