--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,120 +1,2 @@
-@import "/home/croy/.cache/wal/colors-waybar.css";
-
-* {
-    font-family: Liberation Sans;
-    font-size: 15px;
-    color: @foreground;
-    transition: 200ms;
-}
-
-/********************************
-********* NOTIFICATION **********
-*********************************/
-
-.notification {
-    border: none;
-    border-radius: 15px;
-}
-
-.summary {
-    font-size: 16px;
-}
-
-.floating-notifications {
-    background: transparent;
-}
-
-.notification-background {
-    background: transparent;
-}
-
-.notification-content {
-    background: transparent;
-    border-radius: 0px;
-    padding: 10px;
-}
-.image,
-.body-image {
-    /* .image is the icon */
-    margin: 0px 5px 0px 0px;
-}
-
-.notification-default-action {
-    background: @background;
-    border: 2px solid @noti-bg-dark;
-    opacity: 1;
-    border-radius: 15px;
-    transition: all 0.2s ease-in-out;
-}
-.notification-default-action:not(:only-child) {
-    /* if other action options are also present */
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
-}
-.notification-default-action:hover {
-    border: 2px solid @noti-border;
-}
-
-.notification-action {
-    border: none;
-    border-radius: 5px;
-    background: @noti-bg-light;
-}
-.notification-action:hover {
-    background: @noti-bg-alt;
-    border: 2px solid @noti-border;
-}
-.notification-action:first-child {
-    border-bottom-left-radius: 15px;
-}
-.notification-action:last-child {
-    border-bottom-right-radius: 15px;
-}
-
-.close-button {
-    padding: 0px;
-    margin: 5px;
-}
-.close-button:hover {
-    box-shadow: none;
-    background: rgba(247, 118, 142, 0.5);
-    transition: all 0.2s ease-in-out;
-}
-
-/********************************
-******** CONTROL CENTER *********
-********************************/
-
-.control-center {
-    background: @background;
-    border: 1px solid @foreground;
-    border-radius: 15px;
-}
-
-.notification-row {
-    background: transparent;
-    outline: none;
-}
-
-.time {
-    color: gray;
-    margin: 3px 37px 0px 0px;
-}
-
-.widget-buttons-grid {
-    margin-top: 15px;
-    background: @background;
-}
-.widget-volume {
-    background: @background;
-}
-.widget-mpris {
-    margin: 8px;
-    padding: 0px;
-    border-radius: 12px;
-    background: @background;
-}
-
-.control-center-list {
-    background: transparent;
-}
+@import "notifications.css";
+@import "control_center.css";
