--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,2 +1,4 @@
+@import "/home/croy/.cache/wal/colors-waybar.css";
+@import "colors.css";
 @import "notifications.css";
 @import "control_center.css";
