--- a/.config/swaync/colors.css
+++ b/.config/swaync/colors.css
@@ -74,7 +74,7 @@
 
 @define-color surface_bright #423733;
 
-@define-color surface_container alpha(@color4, 0.3);
+@define-color surface_container @color12;
 
 @define-color surface_container_high @color8;
 
