--- a/.config/swaync/control_center.css
+++ b/.config/swaync/control_center.css
@@ -1,7 +1,7 @@
 /* === Derived dynamic colors === */
 @define-color base @surface; /* translucent blurred base */
-@define-color surface_custom alpha(@surface_container_high,0.8);
-@define-color hovercolor alpha(@surface_container_high,0.8);
+@define-color surface_custom alpha(@surface_container_high, 0.7);
+@define-color hovercolor alpha(@surface_container_high, 0.9);
 @define-color activecolor @primary_container;
 
 @define-color buttoncolor alpha(@inverse_primary,0.3);
@@ -17,7 +17,10 @@
     color: @text;
     font-size: 1rem;
     font-weight: 900;
-    font-family: "Iosevka Etoile";
+    font-family:
+        "Fira Sans Semibold", "Font Awesome 7 Free", "Font Awesome 7 Brands",
+        "Font Awesome 6 Free", "Font Awesome 6 Brands", FontAwesome, Roboto,
+        Helvetica, Arial, sans-serif;
     transition: 200ms;
 }
 
@@ -179,7 +182,7 @@
 
 /* === Notifications === */
 .control-center .notification-row .notification-background {
-    background-color: @surface_container;
+    background-color: @background;
     border-radius: 10px;
     margin: 5px 0px;
     padding: 15px;
@@ -202,11 +205,8 @@
     color: @text;
     padding: 5px;
 }
-z
-    .control-center
-    .notification-row
-    .notification-background
-    .close-button:hover {
+
+.control-center .notification-row .notification-background .close-button:hover {
     background-color: @activecolor;
 }
 
