--- a/.config/swaync/control_center.css
+++ b/.config/swaync/control_center.css
@@ -83,42 +83,46 @@
 
 /* === Music Player === */
 .widget-mpris {
-    border-radius: 10px;
-    margin: 2px 12px 12px 12px;
-    align-items: center;
-    color: alpha(#000000, 0.8);
+    margin: 8px;
+    padding: 0px;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
 }
 
 .widget-mpris button {
-    background: @surface_custom;
+    background: @button_color;
     border-radius: 10px;
     padding: 4px;
-    margin: 20px 2px;
-    color: alpha(#000000, 0.8);
+    margin-left: 8px;
+    margin-bottom: 4px;
 }
 
 .widget-mpris button:hover {
-    background: @hovercolor;
+    background: darker(@surface_custom);
 }
 
 .widget-mpris-player {
+    margin: 8px;
+    padding: 0px;
     border-radius: 10px;
-    position: absolute;
-    inset: 0;
-    z-index: 0;
-    overflow: hidden;
-    color: alpha(#000000, 0.8);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.55);
+}
+
+.widget-mpris .widget-mpris-player .mpris-background {
+    filter: blur(3px);
 }
 
 .widget-mpris-album-art {
-    border-radius: 1000px;
-    margin: 8px 0 0 8px;
+    border-radius: 10px;
+    margin: 6px 0 0 6px;
 }
 
 .widget-mpris-title {
     font-weight: 900;
-    font-size: 2em;
-    margin: 10px 20px 0 0;
+    font-size: 1.3rem;
+    padding: 5px;
+    margin-right: 8px;
     color: alpha(white, 0.9);
     background-color: alpha(black, 0.6);
 }
@@ -135,13 +139,13 @@
 
 .widget-title {
     font-size: 1.5rem;
-    margin: 0 12px 5px 12px;
+    margin: 0px 12px 5px 12px;
 }
 
 .widget-title button {
     background: @surface_container;
     border-radius: 5px;
-    padding: 4px 16px;
+    padding: 7px 16px;
 }
 
 .widget-title button:hover {
