[UP] screen record script + menu
thx omarchy

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -227,7 +227,7 @@ tooltip {
     font-size: 22px;
 }
 
-#custom-wf-recorder {
+#custom-screen-recording {
     font-size: 14px;
     margin: 2px 7px 0px 7px;
     color: red;
