--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,7 +3,7 @@
 
 * {
     background: alpha(@background, 0);
-    font-family: CaskaydiaMono Nerd Font Propo;
+    font-family: 'CaskaydiaMono Nerd Font Propo';
     font-size: 15px;
     font-weight: normal;
     padding: 2px 0px 2px 0px;
